[gd_scene load_steps=4 format=2]

[ext_resource path="res://BoxScene.gd" type="Script" id=1]
[ext_resource path="res://Target.tscn" type="PackedScene" id=2]

[sub_resource type="CylinderMesh" id=1]

top_radius = 0.2
bottom_radius = 0.2
height = 1.7
radial_segments = 64
rings = 4

[node name="BoxScene" type="Spatial" index="0"]

script = ExtResource( 1 )

[node name="Bag" type="MeshInstance" parent="." index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -0.985591 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "Geometry", "Transform" ]

[node name="JabTarget" parent="." index="1" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -0.8 )
_sections_unfolded = [ "Transform" ]

[node name="CrossTarget" parent="." index="2" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -0.8 )
_sections_unfolded = [ "Transform" ]

[node name="LeftHookTarget" parent="." index="3" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.18, 1.5, -1 )
_sections_unfolded = [ "Transform" ]

[node name="RightHookTarget" parent="." index="4" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.18, 1.5, -1 )
_sections_unfolded = [ "Transform" ]

[node name="LeftUpperTarget" parent="." index="5" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.1, 1, -0.85 )
_sections_unfolded = [ "Transform" ]

[node name="RightUpperTarget" parent="." index="6" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 1, -0.85 )
_sections_unfolded = [ "Transform" ]


